[tool.poetry]
name = "compile"
version = "0.1.0"
description = "this is an SQL integrated python app"
authors = ["liu chiko"]

[tool.poetry.dependencies]
python = "^3.9"
mysql-connector-python = "^8.0.27"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
